tests/typecheck/should_compile/T12069.hs
{-# LANGUAGE ScopedTypeVariables #-}
module T12069 where

foo (_ :: p a) = [] :: [a]
