tests/typecheck/should_fail/T25950.hs
{-# LANGUAGE PartialTypeSignatures #-}

module T25950 where

fails :: _ => a
fails = id $ ()
